--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
@@ -18,8 +19,10 @@
     "react-icons": "^4.4.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
+    "react-spinners": "^0.13.8",
     "sass": "^1.52.3",
     "web-vitals": "^2.1.4"
   },
