added homepage in package file

--- a/docs/package.json
+++ b/docs/package.json
@@ -2,6 +2,7 @@
   "name": "sivan-website-2022",
   "version": "0.1.0",
   "private": false,
+  "homepage": "https://sivanadler.github.io/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
